--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,29 @@
 spring.application.name=practice
 
-# In-memory DB for the prototype
-spring.datasource.url=jdbc:h2:mem:partyapp;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# In-memory DB for the prototype (override via env for Postgres)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:partyapp;DB_CLOSE_DELAY=-1;MODE=PostgreSQL}
+spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER:org.h2.Driver}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+management.endpoints.web.exposure.include=health, info
+management.endpoint.health.probes.enabled=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Outgoing email for OTPs (configure with your SMTP server)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=mitkovencislavov@gmail.com
-spring.mail.password=buzulikfibdyvtie
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.ssl.enabled=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-app.mail.from=noreply@partymonster.com
+spring.mail.host=${SPRING_MAIL_HOST:localhost}
+spring.mail.port=${SPRING_MAIL_PORT:1025}
+spring.mail.username=${SPRING_MAIL_USERNAME:}
+spring.mail.password=${SPRING_MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH:false}
+spring.mail.ssl.enabled=${SPRING_MAIL_SSL_ENABLED:false}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_SMTP_STARTTLS:false}
+app.mail.from=${APP_MAIL_FROM:noreply@partymonster.com}
 
 # Keep OTP logs visible during prototype
 logging.level.com.ddimitko.practice=INFO
