--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 management.endpoints.web.exposure.include=health, info
 management.endpoint.health.probes.enabled=true
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+management.health.mail.enabled=false
 
 # Outgoing email for OTPs (configure with your SMTP server)
 spring.mail.host=${SPRING_MAIL_HOST:localhost}
@@ -27,3 +25,7 @@ app.mail.from=${APP_MAIL_FROM:noreply@partymonster.com}
 
 # Keep OTP logs visible during prototype
 logging.level.com.ddimitko.practice=INFO
+
+# OTLP exporters (disabled by default to avoid noisy failures without a collector)
+management.otlp.metrics.export.enabled=${MANAGEMENT_OTLP_METRICS_EXPORT_ENABLED:false}
+management.otlp.metrics.export.url=${MANAGEMENT_OTLP_METRICS_EXPORT_URL:http://localhost:4318/v1/metrics}
